--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-    <script src="../js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
