--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Business</a>
+                    <a class="nav-link" href="./news/business.html">Business</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Technology</a>
