change in href for index.html

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
                         News
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">US</a>
-                        <a class="dropdown-item" href="#">World</a>
+                        <a class="dropdown-item" href="./US.html">US</a>
+                        <a class="dropdown-item" href="./world.html">World</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./news/business.html">Business</a>
+                    <a class="nav-link" href="./business.html">Business</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Technology</a>
+                    <a class="nav-link" href="./tech.html">Technology</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Science</a>
+                    <a class="nav-link" href="./science.html">Science</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -55,9 +55,9 @@
                         Others
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Entertaiment</a>
-                        <a class="dropdown-item" href="#">Sports</a>
-                        <a class="dropdown-item" href="#">Health</a>
+                        <a class="dropdown-item" href="./entertaiment.html">Entertaiment</a>
+                        <a class="dropdown-item" href="./sports.html">Sports</a>
+                        <a class="dropdown-item" href="./health.html">Health</a>
                     </div>
                 </li>
             </ul>
